ANG-2680: Added white-space setting to .moon-marquee-text as well (was not inherited).  Update Header, Button, and Item sample to demonstrate use of extra spaces.  Fix bad-practice component naming in ButtonSample while we're at it. DCO-1.1-Signed-Off-By: Kevin Schaaf <kevin.schaaf@lge.com>

--- a/css/Marquee.less
+++ b/css/Marquee.less
@@ -20,6 +20,7 @@
 		text-overflow: ellipsis;
 		overflow: hidden;
 		width: 100%;
+	    white-space: pre !important;
 		
 		transition-property: transform;
 		-moz-transition-property: transform;
